| Summary: | ASTERISK-28225: app_voicemail: Channel variable VM_MESSAGEFILE not updated correctly if message marked "urgent" | ||
| Reporter: | boatright (boatright) | Labels: | |
| Date Opened: | 2018-12-30 09:35:06.000-0600 | Date Closed: | 2019-01-11 18:29:32.000-0600 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Applications/app_voicemail |
| Versions: | 13.24.1 16.1.1 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | I think this bug has existed since at least version 11.
If a voicemail is marked "urgent" then the VM_MESSAGEFILE channel variable is not updated correctly since urgent messages are in a different directory. The fix is to update the channel variable when the path to the urgent message is created. Patch attached. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2018-12-30 09:35:08.829-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: boatright (boatright) 2018-12-30 09:39:21.458-0600 It appears my old "submission license agreement" is not in effect any longer so I cannot attach the patch. Since it is short, I will add it as a comment while I get my license agreement updated. --- asterisk-16.1.1/apps/app_voicemail.c 2018-12-26 12:45:13.000000000 -0600 +++ asterisk-16.1.1-patch/apps/app_voicemail.c 2018-12-30 08:56:47.721180201 -0600 @@ -7082,6 +7082,7 @@ RENAME(dir, msgnum, vmu->mailbox, vmu->context, urgdir, x, sfn, dfn); /* Notification must happen for this new message in Urgent folder, not INBOX */ ast_copy_string(fn, dfn, sizeof(fn)); + pbx_builtin_setvar_helper(chan, "VM_MESSAGEFILE", fn); msgnum = x; } #endif (I will follow all the instructions relating to Gerrit and the patch submission process once my license agreement is accepted.) By: Joshua C. Colp (jcolp) 2019-01-02 05:32:01.809-0600 Assigning this to you until your license agreement is accepted. Once done feel free to comment and this will automatically go back into triage. By: boatright (boatright) 2019-01-02 12:20:10.242-0600 I think I've submitted everything to Gerrit correctly... By: Friendly Automation (friendly-automation) 2019-01-11 18:29:32.962-0600 Change 10845 merged by Friendly Automation: app_voicemail: Fix Channel variable VM_MESSAGEFILE for "urgent" voicemail [https://gerrit.asterisk.org/10845|https://gerrit.asterisk.org/10845] By: Friendly Automation (friendly-automation) 2019-01-14 06:21:08.485-0600 Change 10849 merged by Joshua C. Colp: app_voicemail: Fix Channel variable VM_MESSAGEFILE for "urgent" voicemail [https://gerrit.asterisk.org/10849|https://gerrit.asterisk.org/10849] By: Friendly Automation (friendly-automation) 2019-01-14 06:21:18.994-0600 Change 10848 merged by Joshua C. Colp: app_voicemail: Fix Channel variable VM_MESSAGEFILE for "urgent" voicemail [https://gerrit.asterisk.org/10848|https://gerrit.asterisk.org/10848] | ||